Resolves namespacing for BAM page

--- a/wp-content/themes/pop-art-theme/assets/scss/templates/_page-bam.scss
+++ b/wp-content/themes/pop-art-theme/assets/scss/templates/_page-bam.scss
@@ -1,3 +1,12 @@
+// HERO
+
+#bamHero {
+	background-position: center center;
+	background-size: cover;
+	
+	height: rem-calc(690);
+}
+
 // SOFTWARE BREADCRUMBS
 
 .software-breadcrumbs {
